@@ -1,3 +1,7 @@
+2004-10-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b251
+
+	* Fix 995510: Better animated gif support under ImageMagick
+
 2004-10-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b250
 
 	* Fix 1052559: Regex error in gallery_mail() caused the char preceding
